SDKs/adobe.com/aem/3.5.0-pre.0/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            builder.setSecurity(
                new Security() {{
                    aemAuth = new SchemeAemAuth() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }}
            );

            SDK sdk = builder.build();

            GetAemProductInfoResponse res = sdk.console.getAemProductInfo();

            if (res.statusCode == 200) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### console

* `getAemProductInfo`
* `getConfigMgr`
* `postBundle`
* `postJmxRepository`
* `postSamlConfiguration`

### cq

* `getLoginPage`
* `postCqActions`

### crx

* `getCrxdeStatus`
* `getInstallStatus`
* `getPackageManagerServlet`
* `postPackageService`
* `postPackageServiceJson`
* `postPackageUpdate`
* `postSetPassword`

### custom

* `getAemHealthCheck`
* `postConfigAemHealthCheckServlet`
* `postConfigAemPasswordReset`

### granite

* `sslSetup`

### sling

* `deleteAgent`
* `deleteNode`
* `getAgent`
* `getAgents`
* `getAuthorizableKeystore`
* `getKeystore`
* `getNode`
* `getPackage`
* `getPackageFilter`
* `getQuery`
* `getTruststore`
* `getTruststoreInfo`
* `postAgent`
* `postAuthorizableKeystore`
* `postAuthorizables`
* `postConfigAdobeGraniteSamlAuthenticationHandler`
* `postConfigApacheFelixJettyBasedHttpService`
* `postConfigApacheHttpComponentsProxyConfiguration`
* `postConfigApacheSlingDavExServlet`
* `postConfigApacheSlingGetServlet`
* `postConfigApacheSlingReferrerFilter`
* `postConfigProperty`
* `postNode`
* `postNodeRw`
* `postPath`
* `postQuery`
* `postTreeActivation`
* `postTruststore`
* `postTruststorePkcs12`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
